--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "12.3.1",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
