--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root@localhost:3306/test_db?schema=public"
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=supersecretkey
