--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.11",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
+    "bcryptjs": "^2.4.3",
     "next": "12.3.1",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
