--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
